--- a/index.html
+++ b/index.html
@@ -64,14 +64,41 @@
 		<h3>Lautech Chapter, Ogbomoso</h3>
 </div>
 
-<section>
-<div class="" >
-	<img src="img_1120_widescreen_1.jpg" alt="" class="img-fluid">
-		<div class="display-text">
-						<h1>We Are Icons Of Holiness And Excellence</h1>
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+	<div class="carousel-indicators">
+	  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+	  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+	  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+	</div>
+	<div class="carousel-inner">
+	  <div class="carousel-item active">
+		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(1).jpeg" class="d-block w-100 h-20" alt="..." style="height: 660px;">
+		<div class="carousel-caption d-none d-md-block">
+			<h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
-</div> 
-</section>
+	  </div>
+	  <div class="carousel-item">
+		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(2).jpeg" class="d-block w-100 h-20" alt="..." style="height: 660px;">
+		<div class="carousel-caption d-none d-md-block">
+		  <h1 class="display-text">We are icons of Holiness and Excellence</h1>
+		</div>
+	  </div>
+	  <div class="carousel-item">
+		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM.jpeg" class="d-block w-100 h-20" alt="..." style="height: 660px;">
+		<div class="carousel-caption d-none d-md-block">
+		  <h1 class="display-text">We are icons of Holiness and Excellence</h1>
+		</div>
+	  </div>
+	</div>
+	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	  <span class="visually-hidden">Previous</span>
+	</button>
+	<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	  <span class="visually-hidden">Next</span>
+	</button>
+  </div>
 
 <section class="main">
 		
