--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
 	</div>
 	<div class="carousel-inner">
 	  <div class="carousel-item active">
-		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(1).jpeg" class="d-block w-100 h-20" alt="..." style="height: 660px;">
+		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(1).jpeg" class="d-block w-100" alt="..." style="height: 660px;">
 		<div class="carousel-caption d-none d-md-block">
 			<h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
 	  </div>
 	  <div class="carousel-item">
-		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(2).jpeg" class="d-block w-100 h-20" alt="..." style="height: 660px;">
+		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(2).jpeg" class="d-block w-100" alt="..." style="height: 660px;">
 		<div class="carousel-caption d-none d-md-block">
 		  <h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
 	  </div>
 	  <div class="carousel-item">
-		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM.jpeg" class="d-block w-100 h-20" alt="..." style="height: 660px;">
+		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM.jpeg" class="d-block w-100" alt="..." style="height: 660px;">
 		<div class="carousel-caption d-none d-md-block">
 		  <h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
