--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
 	</div>
 	<div class="carousel-inner">
 	  <div class="carousel-item active">
-		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(1).jpeg" class="d-block w-100" alt="..." style="height: 660px;">
+		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(1).jpeg" class="d-block w-100" alt="..." style="height: 680px;">
 		<div class="carousel-caption d-none d-md-block">
 			<h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
 	  </div>
 	  <div class="carousel-item">
-		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(2).jpeg" class="d-block w-100" alt="..." style="height: 660px;">
+		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(2).jpeg" class="d-block w-100" alt="..." style="height: 680px;">
 		<div class="carousel-caption d-none d-md-block">
 		  <h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
 	  </div>
 	  <div class="carousel-item">
-		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM.jpeg" class="d-block w-100" alt="..." style="height: 660px;">
+		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM.jpeg" class="d-block w-100" alt="..." style="height: 680px;">
 		<div class="carousel-caption d-none d-md-block">
 		  <h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
@@ -118,7 +118,7 @@ Have you ever sat down and think about the word “ETERNITY”?
 
 Eternity is an unending time, it is forever, an experience not bounded by time.
 
-Know this, eternity is certain and you must spend it somewhere.It is either you spend your eternity in heaven or hell.<img src="eternity.jpg" alt="can't-display" style="width:170px; height: 170px; margin-left:15px; float: right;">
+Know this, eternity is certain and you must spend it somewhere.It is either you spend your eternity in heaven or hell.<img src="/img/eternity.jpg" alt="can't-display" style="width:170px; height: 170px; margin-left:15px; float: right;">
 
 
 Some people think after death, all is finished. NO!!! THERE IS LIFE AFTER DEATH.
@@ -188,7 +188,7 @@ WHERE WILL YOU SPEND ETERNITY?
 		<div class="details">
 						<h3>Welcome to the DLCF Lautech online library.</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio,</p>
-						<p><img src="library.jpeg" alt="can't-display" style="width:185px; height: 170px; margin-left:15px; float: right;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.</p>
+						<p><img src="/img/library.jpeg" alt="can't-display" style="width:185px; height: 170px; margin-left:15px; float: right;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.</p>
 		</div>
 		<div class="link"><a href="Library.html">Go To Library</a></div><br>
 		<br>
@@ -221,9 +221,9 @@ WHERE WILL YOU SPEND ETERNITY?
 		<div class="location">
 						<h2>Contact Us</h2>
 						<div class="contacts">
-							 <a href="info@dlcfogb.com" class="contact1"><img src="maill.png" alt="Mail" width="40" height="40"></a>
-							 <a href="https://Facebook.com/dlcfogb" class="contact2"><img src="Facebook.png" alt="Facebook" width="40" height="40"></a>
-							 <a href="https://wa.me/+2348127662880" class="contact3"><img src="WhatsApp.png" alt="WhatsApp" width="40" height="40"></a>
+							 <a href="info@dlcfogb.com" class="contact1"><img src="/img/maill.png" alt="Mail" width="40" height="40"></a>
+							 <a href="https://Facebook.com/dlcfogb" class="contact2"><img src="/img/Facebook.png" alt="Facebook" width="40" height="40"></a>
+							 <a href="https://wa.me/+2348127662880" class="contact3"><img src="/img/WhatsApp.png" alt="WhatsApp" width="40" height="40"></a>
 						</div>
 						<div class="message">
 										<h4>Send us a message:</h4>
