DLCF Ogbomoso website is still in the making

--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@ WHERE WILL YOU SPEND ETERNITY?
 		<div class="location">
 						<h2>Our Worship Centres</h2>
 						<h4>Adenike Cluster: </h4>
-						<h5>Canaan Land District</h5>
+						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">Canaan Land District</a></h5>
 						<h5>L.H District</h5>
 						<h4>Under-G Cluster:</h4>
-						<h5>Mount Zion District</h5>
+						<h5><a href="https://goo.gl/maps/1T34EWp9uHoVv1h18">Mount Zion District</a></h5>
 						<h5>Glory Land District</h5>
 						<h4>Town Cluster:</h4>
-						<h5>Olukoko District</h5>
+						<h5><a href="https://goo.gl/maps/hyjxrGK3Qp7KFjXx5">Olukoko District</a></h5>
 						<h5>Bethel District, along Laguna beach</h5>
 		</div>
 		<hr class="rounded">
@@ -231,7 +231,7 @@ WHERE WILL YOU SPEND ETERNITY?
     
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
   </div>
-										<br><button class="btn btn-primary" id="send">Send</button>
+										<br><button class="btn btn-primary btn-lg col-md-1 shadow-lg mb-6 rounded" id="send">Send</button>
 						</div>
 		</div>
 </section> 
