DLCF Ogbomoso website is still in the making

--- a/Library.html
+++ b/Library.html
@@ -60,7 +60,129 @@
 			  <h1>Deeper Life Campus Fellowship</h1>
 			  <h3>Lautech Chapter, Ogbomoso</h3>
 	  </div>
-	  <h3 style="color: #121d6e; margin:15px;  "><marquee direction="right">This page is under construction</marquee></h3>
+	  <br>
+	  <div class="text-center">
+		<h2>Welcome to The DLCF Ogbomoso E-Library</h2>
+		<p>Unlimited access to academic, spiritual, financial, self-development and motivational resources in ebooks, videos and other digital formals.</p>
+		<br>
+		<h2>Recommended</h2>
+	  </div>
+	  <div class="row m-2">
+  <div class="col-sm-2">
+    <div class="card m-2" style="width: 18rem;">
+		<img src="/img/groupK.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-2">
+    <div class="card m-2" style="width: 18rem;">
+		<img src="/img/groupK.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-2">
+    <div class="card m-2" style="width: 18rem;">
+		<img src="/img/groupK.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-2">
+    <div class="card m-2" style="width: 18rem;">
+		<img src="/img/groupK.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-2">
+    <div class="card m-2" style="width: 18rem;">
+		<img src="/img/groupK.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-2">
+    <div class="card m-2" style="width: 18rem;">
+		<img src="/img/groupK.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-2">
+    <div class="card m-2" style="width: 18rem;">
+		<img src="/img/groupK.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-2">
+    <div class="card m-2" style="width: 18rem;">
+		<img src="/img/groupK.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+</div>
+<br><br><br>
+<div class="text-center">
+	<h1>SECTIONS</h1>
+</div>
+<br>
+<div class="border border-dark">
+	<div class="text-center">
+		<h1>Spiritual</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
+		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+	</div>
+	<br>
+	<div class="text-center">
+		<h1>Academic</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
+		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+	</div>
+	<br>
+	<div class="text-center">
+		<h1>Financial/Motivational</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
+		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+	</div>
+	<br>
+	<div class="text-center">
+		<h1>Skills Acquisition/Self Development</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
+		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+	</div>
+</div>
+<br>
 	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+<footer>
+		<p>Copyright © DEEPER LIFE CAMPUS FELLOWSHIP <br>Ogbomoso, Lautech. <br>2022</p>
+</footer>
 </html>
