--- a/Blogs.html
+++ b/Blogs.html
@@ -65,7 +65,7 @@
 <div class="center">
 	<nav aria-label="...">
   <ul class="pagination">
-    <li class="page-item disabled">
+    <li class="page-item">
       <a class="page-link">Previous</a>
     </li>
     <li class="page-item active"><a class="page-link" href="Blogs.html">1</a></li>
