--- a/Blogs.html
+++ b/Blogs.html
@@ -52,8 +52,8 @@
 		<h3>Lautech Chapter, Ogbomoso</h3>
 </div>
 
+<br>
 
-<div class="center">
 	<nav aria-label="...">
   <ul class="pagination">
     <li class="page-item">
@@ -69,7 +69,7 @@
     </li>
   </ul>
 </nav>
-</div>
+
 <div class="hot">
 <h2>Hot titles:</h2>
 <a href="#">Eternity</a>
@@ -93,7 +93,7 @@ Have you ever sat down and think about the word “ETERNITY”?
 
 Eternity is an unending time, it is forever, an experience not bounded by time.
 
-Know this, eternity is certain and you must spend it somewhere.It is either you spend your eternity in heaven or hell.<img src="eternity.jpg" alt="can't-display" style="width:170px; height: 170px; margin-left:15px; float: right;">
+Know this, eternity is certain and you must spend it somewhere.It is either you spend your eternity in heaven or hell.<img src="img/eternity.jpg" alt="can't-display" style="width:170px; height: 170px; margin-left:15px; float: right;">
 
 
 Some people think after death, all is finished. NO!!! THERE IS LIFE AFTER DEATH.
@@ -169,7 +169,7 @@ Have you ever sat down and think about the word “ETERNITY”?
 
 Eternity is an unending time, it is forever, an experience not bounded by time.
 
-Know this, eternity is certain and you must spend it somewhere.It is either you spend your eternity in heaven or hell.<img src="eternity.jpg" alt="can't-display" style="width:170px; height: 170px; margin-left:15px; float: right;">
+Know this, eternity is certain and you must spend it somewhere.It is either you spend your eternity in heaven or hell.<img src="img/eternity.jpg" alt="can't-display" style="width:170px; height: 170px; margin-left:15px; float: right;">
 
 
 Some people think after death, all is finished. NO!!! THERE IS LIFE AFTER DEATH.
@@ -229,12 +229,21 @@ WHERE WILL YOU SPEND ETERNITY?
 #PricelessJewel
 #Day6of7</p>
 					   </div>	
-						<div class="center">
-<div class="pagination">
-<h5><a class="not" hef="page.html">Previous❮</a>
-<a href="page2.html">❯ Next page</a></h5>
-</div>
-</div>			
+	<nav aria-label="...">
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link">Previous</a>
+    </li>
+    <li class="page-item active"><a class="page-link" href="Blogs.html">1</a></li>
+    <li class="page-item" aria-current="page">
+      <a class="page-link" href="page2.html">2</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#">Next</a>
+    </li>
+  </ul>
+</nav>			
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
