--- a/Library.html
+++ b/Library.html
@@ -63,9 +63,9 @@
     <div class="card m-2" style="width: 18rem;">
 		<img src="/img/groupK.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
   </div>
@@ -73,9 +73,9 @@
     <div class="card m-2" style="width: 18rem;">
 		<img src="/img/groupK.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
   </div>
@@ -83,9 +83,9 @@
     <div class="card m-2" style="width: 18rem;">
 		<img src="/img/groupK.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
   </div>
@@ -93,9 +93,9 @@
     <div class="card m-2" style="width: 18rem;">
 		<img src="/img/groupK.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
   </div>
@@ -103,9 +103,9 @@
     <div class="card m-2" style="width: 18rem;">
 		<img src="/img/groupK.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
   </div>
@@ -113,9 +113,9 @@
     <div class="card m-2" style="width: 18rem;">
 		<img src="/img/groupK.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
   </div>
@@ -123,9 +123,9 @@
     <div class="card m-2" style="width: 18rem;">
 		<img src="/img/groupK.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
   </div>
@@ -133,9 +133,9 @@
     <div class="card m-2" style="width: 18rem;">
 		<img src="/img/groupK.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
   </div>
