--- a/Blogs.html
+++ b/Blogs.html
@@ -16,7 +16,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
 		<img src="/img/favicon.jpeg" alt="" width="50px" style="margin-left: 15px;">
 	</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
 	<nav aria-label="...">
   <ul class="pagination">
     <li class="page-item">
-      <a class="page-link">Previous</a>
+      <a class="page-link" href="#">Previous</a>
     </li>
     <li class="page-item active"><a class="page-link" href="Blogs.html">1</a></li>
     <li class="page-item" aria-current="page">
@@ -228,11 +228,12 @@ WHERE WILL YOU SPEND ETERNITY?
 #TWCGospelChallenge
 #PricelessJewel
 #Day6of7</p>
-					   </div>	
+					   </div>
+					   <br>
 	<nav aria-label="...">
   <ul class="pagination">
     <li class="page-item">
-      <a class="page-link">Previous</a>
+      <a class="page-link" href="#">Previous</a>
     </li>
     <li class="page-item active"><a class="page-link" href="Blogs.html">1</a></li>
     <li class="page-item" aria-current="page">
