--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<link rel="stylesheet" href="./CSS/style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Trilong|Audiowide|Oswald">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="icon" href="img/favicon.jpeg">
+	<link rel="icon" href="./img/favicon.jpeg">
 	<title>DLCF OGBOMOSO</title>
 </head>
 <body>									
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
-		<img src="/img/favicon.jpeg" alt="" width="50px" style="margin-left: 15px;">
+		<img src="./img/favicon.jpeg" alt="" width="35px" style="margin-top: 10px; float: left;">
 	</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
 				<a class="nav-link" href="Events.html">Events</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="help.html">Help & Enquiries</a>
+				<a class="nav-link" href="help.html">Helps</a>
 			  </li>
 			  
 			</ul>
@@ -64,19 +64,19 @@
 	</div>
 	<div class="carousel-inner">
 	  <div class="carousel-item active">
-		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(1).jpeg" class="d-block w-100" alt="..." style="height: 680px;">
+		<img src="./img/WhatsApp Image 2022-06-15 at 8.39.05 PM(1).jpeg" class="d-block w-100" alt="..." width="90%">
 		<div class="carousel-caption d-none d-md-block">
 			<h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
 	  </div>
 	  <div class="carousel-item">
-		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM(2).jpeg" class="d-block w-100" alt="..." style="height: 680px;">
+		<img src="./img/WhatsApp Image 2022-06-15 at 8.39.05 PM(2).jpeg" class="d-block w-100" alt="..." style=" width: 90%;">
 		<div class="carousel-caption d-none d-md-block">
 		  <h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
 	  </div>
 	  <div class="carousel-item">
-		<img src="/img/WhatsApp Image 2022-06-15 at 8.39.05 PM.jpeg" class="d-block w-100" alt="..." style="height: 680px;">
+		<img src="./img/WhatsApp Image 2022-06-15 at 8.39.05 PM.jpeg" class="d-block w-100" alt="..." style" width: 90%;">
 		<div class="carousel-caption d-none d-md-block">
 		  <h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
@@ -100,8 +100,8 @@
 		<h4>Find life-inspiring articles and contents here.</h4>
 		<div class="details">
 						<div class="properties">
-						<h3>Eternity</h3>
-						<h4>Author: Pricelessjewel</h4>
+						<h3 style="color: #121d6e; font-size: 20px;">Eternity</h3>
+						<h4 style="color: #f26e28;">Author: Pricelessjewel</h4>
 						<h5>28-05-2022</h5>
 						</div>
 						<p>ETERNITY
@@ -110,7 +110,7 @@ Have you ever sat down and think about the word “ETERNITY”?
 
 Eternity is an unending time, it is forever, an experience not bounded by time.
 
-Know this, eternity is certain and you must spend it somewhere.It is either you spend your eternity in heaven or hell.<img src="/img/eternity.jpg" alt="can't-display" style="width:170px; height: 170px; margin-left:15px; float: right;">
+Know this, eternity is certain and you must spend it somewhere.It is either you spend your eternity in heaven or hell.<img src="./img/eternity.jpg" alt="can't-display" style="width:170px; height: 170px; margin-left:15px; float: right;">
 
 
 Some people think after death, all is finished. NO!!! THERE IS LIFE AFTER DEATH.
@@ -121,7 +121,7 @@ Eternity comes immediately after death and that is why this question is coming t
 
 Some people keep asking wanting to know the exact location of heaven and hell.<br>
 
-Dear friend, the exact location is not a question we need to concentrate on. Let's leave the location and look into this; 
+Dear friend, the exact location is not a question we(<--insert modal button here--!>)(<-- and then the box containing the remainder of the story--!>h) need to concentrate on. Let's leave the location and look into this; 
 
 Heaven is an holy place, it is a place filled with peace, love and happiness while hell is a place of torment.
 
@@ -180,7 +180,7 @@ WHERE WILL YOU SPEND ETERNITY?
 		<div class="details">
 						<h3>Welcome to the DLCF Lautech online library.</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio,</p>
-						<p><img src="/img/library.jpeg" alt="can't-display" style="width:185px; height: 170px; margin-left:15px; float: right;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.</p>
+						<p><img src="./img/library.jpeg" alt="can't-display" style="width:185px; height: 170px; margin-left:15px; float: right;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed )ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.</p>
 		</div>
 		<div class="link"><a href="Library.html">Go To Library</a></div><br>
 		<br>
@@ -188,7 +188,7 @@ WHERE WILL YOU SPEND ETERNITY?
 		<!-- bookstore -->
 		<h2>Colporteur</h2>
 <div class="details">
-						<h2>Order Books At The DLCF Colporteur Stand From Here.</h3>
+						<h4>Order Books At The DLCF Colporteur Stand From Here.</h3>
 		</div>
 		<div class="link"><a href="Bookstore.html">Go To Bookstore</a></div><br>
 </section>
