--- a/Blogs.html
+++ b/Blogs.html
@@ -10,14 +10,14 @@
 	<link rel="stylesheet" href="./CSS/style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Trilong|Audiowide|Oswald">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="icon" href="img/favicon.jpeg">
+	<link rel="icon" href="./img/favicon.jpeg">
 	<title>DLCF OGBOMOSO</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
-		<img src="/img/favicon.jpeg" alt="" width="50px" style="margin-left: 15px;">
+		<img src="./img/favicon.jpeg" alt="" width="35px" style="margin-top: 10px; float: left;">
 	</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 			  <li class="nav-item">
-				<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+				<a class="nav-link" aria-current="page" href="index.html">Home</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="Blogs.html">Blogs</a>
+				<a class="nav-link active" href="Blogs.html">Blogs</a>
 			  </li>
 			  <li class="nav-item">
 				<a class="nav-link" href="Library.html">Library</a>
@@ -38,7 +38,7 @@
 				<a class="nav-link" href="Bookstore.html">Bookshop</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="help.html">Help & Enquiries</a>
+				<a class="nav-link" href="help.html">Helps</a>
 			  </li>
 			  
 			</ul>
@@ -55,8 +55,8 @@
 <br>
 
 	<nav aria-label="...">
-  <ul class="pagination">
-    <li class="page-item">
+  <ul class="pagination justify-content-center" style="margin: 20px o;">
+    <li class="page-item disabled">
       <a class="page-link" href="#">Previous</a>
     </li>
     <li class="page-item active"><a class="page-link" href="Blogs.html">1</a></li>
@@ -93,7 +93,7 @@ Have you ever sat down and think about the word “ETERNITY”?
 
 Eternity is an unending time, it is forever, an experience not bounded by time.
 
-Know this, eternity is certain and you must spend it somewhere.It is either you spend your eternity in heaven or hell.<img src="img/eternity.jpg" alt="can't-display" style="width:170px; height: 170px; margin-left:15px; float: right;">
+Know this, eternity is certain and you must spend it somewhere.It is either you spend your eternity in heaven or hell.<img src="./img/eternity.jpg" alt="can't-display" style="width:170px; height: 170px; margin-left:15px; float: right;">
 
 
 Some people think after death, all is finished. NO!!! THERE IS LIFE AFTER DEATH.
@@ -104,7 +104,7 @@ Eternity comes immediately after death and that is why this question is coming t
 
 Some people keep asking wanting to know the exact location of heaven and hell.<br>
 
-Dear friend, the exact location is not a question we need to concentrate on. Let's leave the location and look into this; 
+Dear friend, the exact location is not a question we(<--insert modal button here--!>)(<-- and then the box containing the remainder of the story--!>h) need to concentrate on. Let's leave the location and look into this; 
 
 Heaven is an holy place, it is a place filled with peace, love and happiness while hell is a place of torment.
 
@@ -231,7 +231,7 @@ WHERE WILL YOU SPEND ETERNITY?
 					   </div>
 					   <br>
 	<nav aria-label="...">
-  <ul class="pagination">
+  <ul class="pagination justify-content-center" style="margin: 20px 0;">
     <li class="page-item">
       <a class="page-link" href="#">Previous</a>
     </li>
@@ -239,7 +239,8 @@ WHERE WILL YOU SPEND ETERNITY?
     <li class="page-item" aria-current="page">
       <a class="page-link" href="page2.html">2</a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#">3</a></li>
     <li class="page-item">
       <a class="page-link" href="#">Next</a>
     </li>
@@ -248,6 +249,16 @@ WHERE WILL YOU SPEND ETERNITY?
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
+<script>
+	var mybutton = document.getElementById("myBtn");
+
+	window.onscroll = function() {scrollfunction()}
+		
+	function scrollfunction()	{
+		if (document.body.scrollTop > {}
+	}
+</script>
 <footer>
 		<p>Copyright © DEEPER LIFE CAMPUS FELLOWSHIP <br>Ogbomoso, Lautech. <br>2022</p>
 </footer>
