--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</div>
 	  </div>
 	  <div class="carousel-item">
-		<img src="./img/WhatsApp Image 2022-06-15 at 8.39.05 PM.jpeg" class="d-block w-100" alt="..." style" width: 90%;">
+		<img src="./img/WhatsApp Image 2022-06-15 at 8.39.05 PM.jpeg" class="d-block w-100" alt="..." width="90%">
 		<div class="carousel-caption d-none d-md-block">
 		  <h1 class="display-text">We are icons of Holiness and Excellence</h1>
 		</div>
@@ -100,9 +100,9 @@
 		<h4>Find life-inspiring articles and contents here.</h4>
 		<div class="details">
 						<div class="properties">
-						<h3 style="color: #121d6e; font-size: 20px;">Eternity</h3>
+						<h3 style="color: #121d6e; font-weight: bold; font-size: 20px;">Eternity</h3>
 						<h4 style="color: #f26e28;">Author: Pricelessjewel</h4>
-						<h5>28-05-2022</h5>
+						<h5 style="font-weight: bold;">28-05-2022</h5>
 						</div>
 						<p>ETERNITY
 
@@ -201,21 +201,36 @@ WHERE WILL YOU SPEND ETERNITY?
 						<h2>Our Worship Centres</h2>
 						<h4>Adenike Cluster: </h4>
 						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">Canaan Land District</a></h5>
-						<h5>L.H District</h5>
+						<h5><a href="https://goo.gl/maps/CKhiXcNG3eXAnKhQ8">L.H District</a></h5>
 						<h4>Under-G Cluster:</h4>
 						<h5><a href="https://goo.gl/maps/1T34EWp9uHoVv1h18">Mount Zion District</a></h5>
-						<h5>Glory Land District</h5>
+						<h5><a href="https://goo.gl/maps/1T34EWp9uHoVv1h18">Glory Land District</a></h5>
 						<h4>Town Cluster:</h4>
 						<h5><a href="https://goo.gl/maps/hyjxrGK3Qp7KFjXx5">Olukoko District</a></h5>
-						<h5>Bethel District, along Laguna beach</h5>
+						<h5><a href="https://goo.gl/maps/hyjxrGK3Qp7KFjXx5">Bethel District, along Laguna beach</a></h5>
+		</div>
+		<hr class="rounded">
+		<div>
+			<!-- Announcements and Updates box here-->
 		</div>
 		<hr class="rounded">
 		<div class="location">
 						<h2>Contact Us</h2>
 						<div class="contacts">
-							 <a href="info@dlcfogb.com" class="contact1"><img src="/img/maill.png" alt="Mail" width="40" height="40"></a>
-							 <a href="https://Facebook.com/dlcfogb" class="contact2"><img src="/img/Facebook.png" alt="Facebook" width="40" height="40"></a>
-							 <a href="https://wa.me/+2348127662880" class="contact3"><img src="/img/WhatsApp.png" alt="WhatsApp" width="40" height="40"></a>
+							 <a href="mailto:info@dlcfogb.com" class="contact1"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="red" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+  <rect x="3" y="5" width="18" height="14" rx="2" />
+  <polyline points="3 7 12 13 21 7" />
+</svg></a>
+							 <a href="https://Facebook.com/dlcfogb" class="contact2"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="blue" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+  <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+</svg></a>
+							 <a href="https://wa.me/+2348127662880" class="contact3"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="green" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+  <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+  <path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
+</svg></a>
 						</div>
 						<div class="message">
 										<h4>Send us a message:</h4>
@@ -235,3 +250,4 @@ WHERE WILL YOU SPEND ETERNITY?
 	<p>Copyright © DEEPER LIFE CAMPUS FELLOWSHIP <br>Ogbomoso, Lautech. <br>2022</p>
 </footer>
 </html>
+  
