--- a/Library.html
+++ b/Library.html
@@ -7,17 +7,18 @@
 	<meta name="description" content="Deeper Life Campus Fellowship, Ogbomoso">
 	<meta name="keywords" content="Deeper Life, Campus, Fellowship, Church, Christian, Holiness">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="/CSS/style.css">
+	<link rel="stylesheet" href="./CSS/style.css">
+	<link rel="stylesheet" href="./CSS/library.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Trilong|Audiowide|Oswald">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="icon" href="img/favicon.jpeg">
+	<link rel="icon" href="./img/favicon.jpeg">
 	<title>DLCF OGBOMOSO</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
 		  <a class="navbar-brand" href="index.html">
-			  <img src="/img/favicon.jpeg" alt="" width="50px" style="margin-left: 15px;">
+			  <img src="./img/favicon.jpeg" alt="" width="35px" style="margin-top: 10px; float: left;">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -26,19 +27,19 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 				  <ul class="navbar-nav">
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+					  <a class="nav-link" aria-current="page" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
 					  <a class="nav-link" href="Blogs.html">Blogs</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="Library.html">Library</a>
+					  <a class="nav-link active" href="Library.html">Library</a>
 					</li>
 					<li class="nav-item">
 					  <a class="nav-link" href="Bookstore.html">Bookshop</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="help.html">Help & Enquiries</a>
+					  <a class="nav-link" href="help.html">Helps</a>
 					</li>
 					
 				  </ul>
@@ -54,93 +55,92 @@
 	  <br>
 	  <div class="text-center">
 		<h2>Welcome to The DLCF Ogbomoso E-Library</h2>
-		<p>Unlimited access to academic, spiritual, financial, self-development and motivational resources in ebooks, videos and other digital formals.</p>
+		<p>Unlimited access to academic, spiritual, financial, self-development and motivational resources in ebooks, videos and other digital formats.</p>
 		<br>
+		<!--a large box container here to contain titles-->
 		<h2>Recommended</h2>
 	  </div>
-	  <div class="row m-2">
-  <div class="col-sm-2">
-    <div class="card m-2" style="width: 18rem;">
-		<img src="/img/groupK.png" class="card-img-top" alt="...">
+
+  <div class="books">
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
         <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
-  </div>
-  <div class="col-sm-2">
-    <div class="card m-2" style="width: 18rem;">
-		<img src="/img/groupK.png" class="card-img-top" alt="...">
+
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
+      </div>
+    </div>
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
         <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
-  </div>
-  <div class="col-sm-2">
-    <div class="card m-2" style="width: 18rem;">
-		<img src="/img/groupK.png" class="card-img-top" alt="...">
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
         <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
-  </div>
-  <div class="col-sm-2">
-    <div class="card m-2" style="width: 18rem;">
-		<img src="/img/groupK.png" class="card-img-top" alt="...">
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
         <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
-  </div>
-  <div class="col-sm-2">
-    <div class="card m-2" style="width: 18rem;">
-		<img src="/img/groupK.png" class="card-img-top" alt="...">
+
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
         <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
-  </div>
-  <div class="col-sm-2">
-    <div class="card m-2" style="width: 18rem;">
-		<img src="/img/groupK.png" class="card-img-top" alt="...">
+ 
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
         <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
-  </div>
-  <div class="col-sm-2">
-    <div class="card m-2" style="width: 18rem;">
-		<img src="/img/groupK.png" class="card-img-top" alt="...">
+ 
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
         <a href="#" class="btn btn-primary">Download</a>
       </div>
     </div>
-  </div>
-  <div class="col-sm-2">
-    <div class="card m-2" style="width: 18rem;">
-		<img src="/img/groupK.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
-        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
-      </div>
-    </div>
-  </div>
-</div>
-<br><br><br>
+ 
+<br><br><br><br><br><br>
+<div class="secttion">
 <div class="text-center">
 	<h1>SECTIONS</h1>
 </div>
@@ -169,6 +169,7 @@
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
 		<a href="#" class="btn btn-danger col-md-1">Click here</a>
 	</div>
+</div>
 </div>
 <br>
 	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
