--- a/Blogs.html
+++ b/Blogs.html
@@ -76,7 +76,7 @@
 <a href="#">Faded</a>
 <a href="#">Mortal</a>
 <a href="#">The Secret Of The Secret Place</a>
-<a class="All" style="color: #121d6e; text-decoration: underline;" href="#">See All Titles</a></div>
+<a class="All" style="color: #121d6e; text-decoration: underline;" href="#">See All Titles<!--put a modal box here to contain the titles--></a></div>
 </div>
 
 <section class="main">
@@ -245,7 +245,8 @@ WHERE WILL YOU SPEND ETERNITY?
       <a class="page-link" href="#">Next</a>
     </li>
   </ul>
-</nav>			
+</nav>
+<button onclick="topFunction()" id="myBtn" title="Go to top">Back To Top</button>			
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
@@ -256,7 +257,16 @@ WHERE WILL YOU SPEND ETERNITY?
 	window.onscroll = function() {scrollfunction()}
 		
 	function scrollfunction()	{
-		if (document.body.scrollTop > {}
+		if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+			mybutton.style.display = "block";
+		} else {
+			mybutton.style.display = "none";
+		}
+	}
+
+	function topFunction() {
+		document.body.scrollTop = 0;
+		document.documentElement.scrollTop = 0;
 	}
 </script>
 <footer>
