--- a/Bookstore.html
+++ b/Bookstore.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="./CSS/style.css">
 	<link rel="stylesheet" href="./CSS/library.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Trilong|Audiowide|Oswald">
+	<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&family=Rubik:wght@350&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="icon" href="img/favicon.jpeg">
 	<title>DLCF OGBOMOSO</title>
@@ -48,24 +49,26 @@
 		  </div>
 		</div>
 	  </nav>
-	   <div class="box">
+	  <div class="box">
 			  <h1>Deeper Life Campus Fellowship</h1>
 			  <h3>Lautech Chapter, Ogbomoso</h3>
 	  </div>
 	  <br>
 	  <div class="text-center">
 		<h2>Welcome to The DLCF Ogbomoso E-Library</h2>
-		<p>Unlimited access to academic, spiritual, financial, self-development and motivational resources in ebooks, videos and other digital formals.</p>
+		<p>Unlimited access to academic, spiritual, financial, self-development and motivational resources in ebooks, videos and other digital formats.</p>
 		<br>
+		<!--a large box container here to contain titles-->
 		<h2>Recommended</h2>
 	  </div>
-	  <div class="books">
+
+  <div class="books">
     <div class="card m-2 clearfix" style="width: 12rem;">
 		<img src="./img/groupK.png" class="bkimg" alt="...">
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
 
@@ -74,7 +77,7 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
    
@@ -83,17 +86,7 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
-      </div>
-    </div>
-  
-   
-    <div class="card m-2 clearfix" style="width: 12rem;">
-		<img src="./img/groupK.png" class="bkimg" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
-        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
   
@@ -103,7 +96,17 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
       </div>
     </div>
 
@@ -113,7 +116,7 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
  
@@ -123,7 +126,7 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
  
@@ -133,39 +136,37 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
+  </div>
  
-<br><br><br><br><br><br>
 <div class="secttion">
-<div class="text-center">
-	<h1>SECTIONS</h1>
-</div>
-<br>
-<div class="border border-dark">
+<h2 style="text-align: center;">SECTIONS</h2>
+
+<div class="border section-container">
 	<div class="text-center">
-		<h1>Spiritual</h1>
+		<h3>Spiritual</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
-		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+		<a href="#">Click here</a>
 	</div>
 	<br>
 	<div class="text-center">
-		<h1>Academic</h1>
+		<h3>Academic</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
-		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+		<a href="#">Click here</a>
 	</div>
 	<br>
 	<div class="text-center">
-		<h1>Financial/Motivational</h1>
+		<h3>Financial/Motivational</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
-		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+		<a href="#">Click here</a>
 	</div>
 	<br>
 	<div class="text-center">
-		<h1>Skills Acquisition/Self Development</h1>
+		<h3>Skills Acquisition/Self Development</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
-		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+		<a href="#">Click here</a>
 	</div>
 </div>
 </div>
