--- a/Library.html
+++ b/Library.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="./CSS/style.css">
 	<link rel="stylesheet" href="./CSS/library.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Trilong|Audiowide|Oswald">
+	<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&family=Rubik:wght@350&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="icon" href="./img/favicon.jpeg">
 	<title>DLCF OGBOMOSO</title>
@@ -67,7 +68,7 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
 
@@ -76,7 +77,7 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
    
@@ -85,17 +86,7 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
-      </div>
-    </div>
-  
-   
-    <div class="card m-2 clearfix" style="width: 12rem;">
-		<img src="./img/groupK.png" class="bkimg" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
-        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
   
@@ -105,7 +96,17 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
       </div>
     </div>
 
@@ -115,7 +116,7 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
  
@@ -125,7 +126,7 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
  
@@ -135,39 +136,37 @@
       <div class="card-body">
         <h5 class="card-title">Richest man in Babylon by George Clason</h5>
         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#">Download</a>
       </div>
     </div>
+  </div>
  
-<br><br><br><br><br><br>
 <div class="secttion">
-<div class="text-center">
-	<h1>SECTIONS</h1>
-</div>
-<br>
-<div class="border border-dark">
+<h2 style="text-align: center;">SECTIONS</h2>
+
+<div class="border section-container">
 	<div class="text-center">
-		<h1>Spiritual</h1>
+		<h3>Spiritual</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
-		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+		<a href="#">Click here</a>
 	</div>
 	<br>
 	<div class="text-center">
-		<h1>Academic</h1>
+		<h3>Academic</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
-		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+		<a href="#">Click here</a>
 	</div>
 	<br>
 	<div class="text-center">
-		<h1>Financial/Motivational</h1>
+		<h3>Financial/Motivational</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
-		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+		<a href="#">Click here</a>
 	</div>
 	<br>
 	<div class="text-center">
-		<h1>Skills Acquisition/Self Development</h1>
+		<h3>Skills Acquisition/Self Development</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
-		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+		<a href="#">Click here</a>
 	</div>
 </div>
 </div>
