--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="./CSS/style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Trilong|Audiowide|Oswald">
+	<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&family=Rubik:wght@350&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="icon" href="./img/favicon.jpeg">
 	<title>DLCF OGBOMOSO</title>
@@ -247,7 +248,7 @@ WHERE WILL YOU SPEND ETERNITY?
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 <footer>
-	<p>Copyright © DEEPER LIFE CAMPUS FELLOWSHIP <br>Ogbomoso, Lautech. <br>2022</p>
+	<p>DEEPER LIFE CAMPUS FELLOWSHIP <br>Ogbomoso, Lautech.<br>© Copyright 2022 </p>
 </footer>
 </html>
   
