--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ WHERE WILL YOU SPEND ETERNITY?
     
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
   </div>
-										<br><button class="btn btn-primary btn-lg col-md-1 shadow-lg mb-6 rounded" id="send">Send</button>
+										<div class="link"><a href="Library.html">Send</a></div><br>
 						</div>
 		</div>
 </section> 
