--- a/Blogs.html
+++ b/Blogs.html
@@ -70,14 +70,45 @@
   </ul>
 </nav>
 
-<div class="hot">
-<h2>Hot titles:</h2>
+<!--<div class="hot">
+<h3>Hot titles:</h3>
 <a href="#">Eternity</a>
 <a href="#">Faded</a>
 <a href="#">Mortal</a>
 <a href="#">The Secret Of The Secret Place</a>
-<a class="All" style="color: #121d6e; text-decoration: underline;" href="#">See All Titles<!--put a modal box here to contain the titles--></a></div>
-</div>
+<a class="All" style="color: #121d6e; text-decoration: underline;" href="#">See All Titles< !--put a modal box here to contain the titles- -></a></div>
+</div>-->
+
+	<div class="title-box">
+	 <div id="accordion">
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseOne">
+          <h3>Find Titles Here</h3>
+        </a>
+      </div>
+      <div id="collapseOne" class="collapse" data-bs-parent="#accordion">
+        <div class="card-body">
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+        <li>yfucuuy</li>
+       	</div>
+      </div>
+    </div>
+   </div>
+  </div>
 
 <section class="main">
 <h2 style="text-align: center;">Latest Articles and Stories</h2>
@@ -230,7 +261,7 @@ WHERE WILL YOU SPEND ETERNITY?
 #Day6of7</p>
 					   </div>
 					   <br>
-	<nav aria-label="...">
+	<nav aria-label="..." class="pagination-width">
   <ul class="pagination justify-content-center" style="margin: 20px 0;">
     <li class="page-item">
       <a class="page-link" href="#">Previous</a>
