--- a/Bookstore.html
+++ b/Bookstore.html
@@ -141,29 +141,31 @@
     </div>
   </div>
  
+<div class="clearfix"></div>
+<br><br>
 <div class="secttion">
 <h2 style="text-align: center;">SECTIONS</h2>
 
 <div class="border section-container">
-	<div class="text-center">
+	<div class="text-centerr">
 		<h3>Spiritual</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
 		<a href="#">Click here</a>
 	</div>
 	<br>
-	<div class="text-center">
+	<div class="text-centerr">
 		<h3>Academic</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
 		<a href="#">Click here</a>
 	</div>
 	<br>
-	<div class="text-center">
+	<div class="text-centerr">
 		<h3>Financial/Motivational</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
 		<a href="#">Click here</a>
 	</div>
 	<br>
-	<div class="text-center">
+	<div class="text-centerr">
 		<h3>Skills Acquisition/Self Development</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
 		<a href="#">Click here</a>
