--- a/Library.html
+++ b/Library.html
@@ -140,30 +140,285 @@
       </div>
     </div>
   </div>
+
+  <div class="clearfix"></div>
+	<br><br> 
+ <h2 class="text-center">AllEbooks</h2>
+	  
+
+  <div class="books">
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+ 
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="clearfix"></div>
+  <br><br> 
+  <h2 class="text-center">PastQuestions</h2>  
+
+  <div class="books">
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+ 
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+ 
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="clearfix"></div>
+  <br><br> 
+  <h2 class="text-center">AudioMessages</h2>
+	  
+
+  <div class="books">
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+ 
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+ 
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#">Download</a>
+      </div>
+    </div>
+  </div>
+
+<div></div>
+
+<div class="clearfix"></div>
+<br><br>
 <div class="secttion">
 <h2 style="text-align: center;">SECTIONS</h2>
 
 <div class="border section-container">
-	<div class="text-center">
+	<div class="text-centerr">
 		<h3>Spiritual</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
 		<a href="#">Click here</a>
 	</div>
 	<br>
-	<div class="text-center">
+	<div class="text-centerr">
 		<h3>Academic</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
 		<a href="#">Click here</a>
 	</div>
 	<br>
-	<div class="text-center">
+	<div class="text-centerr">
 		<h3>Financial/Motivational</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
 		<a href="#">Click here</a>
 	</div>
 	<br>
-	<div class="text-center">
+	<div class="text-centerr">
 		<h3>Skills Acquisition/Self Development</h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
 		<a href="#">Click here</a>
